force-app/main/default/objects/dn_Denial__c/dn_Denial__c.object-meta.xml
<CustomObject>
    <label>Denial</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Denials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Denials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>