force-app/main/default/objects/dn_Denial__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assignee</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>