force-app/main/default/objects/dn_Denial__c/fields/bypass_CO_100__c.field-meta.xml
<CustomField>
    <fullName>bypass_CO_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bypass CO_100</label>
    <type>Checkbox</type>
</CustomField>