force-app/main/default/objects/dn_Denial__c/fields/Denial_Re_Routing__c.field-meta.xml
<CustomField>
    <fullName>Denial_Re_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denial Re-Routing</label>
    <type>Checkbox</type>
</CustomField>