force-app/main/default/objects/dn_Denial__c/fields/Denial_ReRouting__c.field-meta.xml
<CustomField>
    <fullName>Denial_ReRouting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denial ReRouting</label>
    <type>Checkbox</type>
</CustomField>