force-app/main/default/objects/dn_Denial__c/fields/Denials_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Denials_Last_Modified_By__c</fullName>
    <formula>IF(
  LastModifiedBy.dn_Name__c = &quot;Krishna Kumar&quot;,
  &quot;&quot;,
  LastModifiedBy.dn_Name__c &amp; &quot;, &quot; &amp; TEXT(DATEVALUE(LastModifiedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Denials Last Modified By</label>
    <type>Text</type>
</CustomField>