force-app/main/default/objects/dn_Denial__c/fields/dn_ADJUSTMENT_CODE4_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>dn_ADJUSTMENT_CODE4_DESCRIPTION__c</fullName>
    <label>Adjustment Code 4 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>