force-app/main/default/objects/dn_Denial__c/fields/dn_ADJUSTMENT_CODE5__c.field-meta.xml
<CustomField>
    <fullName>dn_ADJUSTMENT_CODE5__c</fullName>
    <label>Adjustment Code 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>