force-app/main/default/objects/dn_Denial__c/fields/dn_Adjustment_Code_1__c.field-meta.xml
<CustomField>
    <fullName>dn_Adjustment_Code_1__c</fullName>
    <label>Adjustment Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>