force-app/main/default/objects/dn_Denial__c/fields/dn_Adjustment_Code_1_Description__c.field-meta.xml
<CustomField>
    <fullName>dn_Adjustment_Code_1_Description__c</fullName>
    <label>Adjustment Code 1 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>