force-app/main/default/objects/dn_Denial__c/fields/dn_Adjustment_Code_3__c.field-meta.xml
<CustomField>
    <fullName>dn_Adjustment_Code_3__c</fullName>
    <label>Adjustment Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>