force-app/main/default/objects/dn_Denial__c/fields/Dn_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Dn_Assigned__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>