force-app/main/default/objects/dn_Denial__c/fields/dn_BALANCE__c.field-meta.xml
<CustomField>
    <fullName>dn_BALANCE__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>