force-app/main/default/objects/dn_Denial__c/fields/dn_BUSINESS_ENTITY_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_BUSINESS_ENTITY_ID__c</fullName>
    <label>Business Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>