force-app/main/default/objects/dn_Denial__c/fields/dn_CHARGE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>dn_CHARGE_AMOUNT__c</fullName>
    <label>Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>