force-app/main/default/objects/dn_Denial__c/fields/dn_CLAIM_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_CLAIM_ID__c</fullName>
    <label>Claim Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>