force-app/main/default/objects/dn_Denial__c/fields/dn_CLAIM_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>dn_CLAIM_NUMBER__c</fullName>
    <label>Claim Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>