force-app/main/default/objects/dn_Denial__c/fields/dn_CLAIM_SUBMISSION_DATE__c.field-meta.xml
<CustomField>
    <fullName>dn_CLAIM_SUBMISSION_DATE__c</fullName>
    <label>Claim Submission Date</label>
    <type>Date</type>
</CustomField>