force-app/main/default/objects/dn_Denial__c/fields/dn_DENIAL_POSTING_DATE__c.field-meta.xml
<CustomField>
    <fullName>dn_DENIAL_POSTING_DATE__c</fullName>
    <label>Denial Posting Date</label>
    <type>Date</type>
</CustomField>