force-app/main/default/objects/dn_Denial__c/fields/dn_DENIED_CATEGORY_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_DENIED_CATEGORY_ID__c</fullName>
    <label>Denied Category Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>