force-app/main/default/objects/dn_Denial__c/fields/dn_DENYING_PARTY__c.field-meta.xml
<CustomField>
    <fullName>dn_DENYING_PARTY__c</fullName>
    <label>Denying Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>