force-app/main/default/objects/dn_Denial__c/fields/dn_DOS__c.field-meta.xml
<CustomField>
    <fullName>dn_DOS__c</fullName>
    <description>Date of Service</description>
    <label>DOS</label>
    <type>Date</type>
</CustomField>