force-app/main/default/objects/dn_Denial__c/fields/dn_Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>dn_Financial_Class__c</fullName>
    <label>Financial Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>