force-app/main/default/objects/dn_Denial__c/fields/dn_INSURANCE_POLICY_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_INSURANCE_POLICY_ID__c</fullName>
    <label>Insurance Policy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>