force-app/main/default/objects/dn_Denial__c/fields/dn_Last_Edited_by_Team__c.field-meta.xml
<CustomField>
    <fullName>dn_Last_Edited_by_Team__c</fullName>
    <label>Last Edited by Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>