force-app/main/default/objects/dn_Denial__c/fields/dn_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>dn_LOCATION__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>