force-app/main/default/objects/dn_Denial__c/fields/dn_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>dn_Location_Id__c</fullName>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>