force-app/main/default/objects/dn_Denial__c/fields/dn_METADATA_TIMESTAMP__c.field-meta.xml
<CustomField>
    <fullName>dn_METADATA_TIMESTAMP__c</fullName>
    <label>Metadata Time Stamp</label>
    <type>DateTime</type>
</CustomField>