force-app/main/default/objects/dn_Denial__c/fields/dn_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>dn_Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Denials</relationshipLabel>
    <relationshipName>Denials</relationshipName>
    <type>Lookup</type>
</CustomField>