force-app/main/default/objects/dn_Denial__c/fields/dn_PATIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_PATIENT_ID__c</fullName>
    <label>Patient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>