force-app/main/default/objects/dn_Denial__c/fields/dn_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>dn_Patient_Name__c</fullName>
    <formula>dn_Patient_Account__r.dn_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>