force-app/main/default/objects/dn_Denial__c/fields/dn_PAYER__c.field-meta.xml
<CustomField>
    <fullName>dn_PAYER__c</fullName>
    <label>Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>