force-app/main/default/objects/dn_Denial__c/fields/dn_POLICY_PRIMARY_PAYER__c.field-meta.xml
<CustomField>
    <fullName>dn_POLICY_PRIMARY_PAYER__c</fullName>
    <label>Policy Primary Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>