force-app/main/default/objects/dn_Denial__c/fields/dn_PROCEDURE_CODE__c.field-meta.xml
<CustomField>
    <fullName>dn_PROCEDURE_CODE__c</fullName>
    <label>Procedure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>