force-app/main/default/objects/dn_Denial__c/fields/dn_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>dn_PROVIDER__c</fullName>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>