force-app/main/default/objects/dn_Denial__c/fields/dn_PROVIDER_GROUPING__c.field-meta.xml
<CustomField>
    <fullName>dn_PROVIDER_GROUPING__c</fullName>
    <label>Provider Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>Not MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>