force-app/main/default/objects/dn_Denial__c/fields/dn_REMARK_CODE1__c.field-meta.xml
<CustomField>
    <fullName>dn_REMARK_CODE1__c</fullName>
    <label>Remark Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>