force-app/main/default/objects/dn_Denial__c/fields/dn_REMARK_CODE1_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>dn_REMARK_CODE1_DESCRIPTION__c</fullName>
    <label>Remark Code 1 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>