force-app/main/default/objects/dn_Denial__c/fields/dn_REMARK_CODE3__c.field-meta.xml
<CustomField>
    <fullName>dn_REMARK_CODE3__c</fullName>
    <label>Remark Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>