force-app/main/default/objects/dn_Denial__c/fields/dn_TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_TAX_ID__c</fullName>
    <label>Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>