force-app/main/default/objects/dn_Denial__c/fields/dn_TRANSACTION_DETAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_TRANSACTION_DETAIL_ID__c</fullName>
    <externalId>true</externalId>
    <label>Snowflake Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>