force-app/main/default/objects/dn_Denial__c/fields/dn_UPDATED_AT__c.field-meta.xml
<CustomField>
    <fullName>dn_UPDATED_AT__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>