force-app/main/default/objects/dn_Denial__c/fields/dn_UPDATED_BY_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>dn_UPDATED_BY_USER_ID__c</fullName>
    <label>Updated By User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>