force-app/main/default/objects/dn_Denial__c/fields/Last_Edited_by_Team__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited_by_Team__c</fullName>
    <formula>IF(TEXT(LastModifiedBy.Team__c) == &apos;&apos; || TEXT(LastModifiedBy.Team__c) == NULL,  
  IF(TEXT(LastModifiedBy.Denial_s_Team__c)== &apos;&apos; || TEXT(LastModifiedBy.Denial_s_Team__c) == NULL, 
    IF(TEXT(LastModifiedBy.Day_Planner_Team__c) == &apos;&apos; || TEXT(LastModifiedBy.Day_Planner_Team__c) == NULL, &apos;&apos;, TEXT(LastModifiedBy.Day_Planner_Team__c) ) , TEXT(LastModifiedBy.Denial_s_Team__c) ) ,TEXT(LastModifiedBy.Team__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Edited by Team</label>
    <type>Text</type>
</CustomField>