force-app/main/default/objects/dn_Denial__c/fields/Testing_Patient__c.field-meta.xml
<CustomField>
    <fullName>Testing_Patient__c</fullName>
    <formula>dn_Patient_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing Patient</label>
    <type>Text</type>
</CustomField>