force-app/main/default/objects/dn_Denial__c/fields/User_Assignment__c.field-meta.xml
<CustomField>
    <fullName>User_Assignment__c</fullName>
    <label>User Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>