force-app/main/default/objects/dn_Denial__c/validationRules/dn_Status_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>dn_Status_ValidationRule</fullName>
    <active>false</active>
    <description>The Status field on the record should only be editable by the record owner. Other users should not be allowed to modify it.</description>
    <errorConditionFormula>AND(
    ISCHANGED(dn_Status__c),
    OwnerId &lt;&gt; $User.Id,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only the record owner is allowed to modify the Status.</errorMessage>
</ValidationRule>