force-app/main/default/objects/dn_Denial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>dn_Adjustment_Code_1__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>dn_CO_100_Status__c</columns>
    <columns>Patient_Full_Name__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>dn_DOS__c</columns>
    <columns>dn_PROCEDURE_CODE__c</columns>
    <columns>dn_PROVIDER__c</columns>
    <columns>dn_LOCATION__c</columns>
    <columns>dn_DENIAL_DATE__c</columns>
    <columns>dn_DENIED_CATEGORY__c</columns>
    <columns>dn_DENYING_PARTY__c</columns>
    <columns>dn_POLICY_PRIMARY_PAYER__c</columns>
    <columns>dn_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>