force-app/main/default/objects/dn_Denial__c/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>Dn_Assigned__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>dn_Adjustment_Code_1__c</columns>
    <columns>dn_Financial_Class__c</columns>
    <columns>dn_PROVIDER_GROUPING__c</columns>
    <columns>dn_Provider_Id__c</columns>
    <columns>dn_PROCEDURE_CODE__c</columns>
    <columns>dn_Patient_Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dn_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Owner_Full_Name__c</field>
        <operation>equals</operation>
        <value>My records</value>
    </filters>
    <label>Closed</label>
</ListView>