force-app/main/default/objects/dn_Denial__c/listViews/Conservative_Denials.listView-meta.xml
<ListView>
    <fullName>Conservative_Denials</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>dn_Patient_Account__c</columns>
    <columns>dn_DOS__c</columns>
    <columns>dn_PROCEDURE_CODE__c</columns>
    <columns>dn_PROVIDER__c</columns>
    <columns>dn_LOCATION__c</columns>
    <columns>dn_DENIAL_DATE__c</columns>
    <columns>dn_DENIED_CATEGORY__c</columns>
    <columns>dn_DENYING_PARTY__c</columns>
    <columns>dn_POLICY_PRIMARY_PAYER__c</columns>
    <columns>dn_POLICY_SECONDARY_PAYER__c</columns>
    <columns>dn_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dn_PROVIDER_GROUPING__c</field>
        <operation>equals</operation>
        <value>Not MD</value>
    </filters>
    <label>Conservative Denials</label>
</ListView>